added README + images

--- a/deproject_imlup.ipynb
+++ b/deproject_imlup.ipynb
@@ -39,12 +39,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from pathlib import Path\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.colors import LogNorm\n",
     "from scipy.interpolate import griddata\n",
     "\n",
-    "from gofish import imagecube"
+    "from gofish import imagecube\n",
+    "\n",
+    "figpath = Path('figures')\n",
+    "figpath.mkdir(exist_ok=True)"
    ]
   },
   {
@@ -71,6 +75,7 @@
    "outputs": [],
    "source": [
     "fname = 'IMLup_continuum.fits'\n",
+    "name = 'IM Lup (ALMA)'\n",
     "clip = 3.0\n",
     "\n",
     "opts = dict(inc=47.5, PA=144.55, z0=0.0, psi=0.0, q_taper=1.0, r_taper=np.inf)"
@@ -103,6 +108,7 @@
    "outputs": [],
    "source": [
     "fname = 'IM_Lup_reducedRob_median_Hband_12.25mas_mod.fits'\n",
+    "name = 'IM Lup (SPHERE)'\n",
     "clip = 4.0\n",
     "dpc = 155.82\n",
     "z0 = -18 * (dpc / 100)**1.271 / dpc\n",
@@ -263,7 +269,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "norm = LogNorm(1e-3 * img.data.max(), img.data.max())"
+    "norm = LogNorm(1e-3 * img.data.max(), img.data.max())\n",
+    "figname = name.replace('(','').replace(')','').replace(' ','_')"
    ]
   },
   {
@@ -289,6 +296,7 @@
     "ax.pcolormesh(img.xaxis, img.yaxis, img.data, norm=norm)\n",
     "ax.set_xlim(ax.get_xlim()[::-1])\n",
     "ax.set_aspect(1)\n",
+    "ax.text(0.015, 0.95, name, transform=axs[0].transAxes, color='w', bbox={'color':'k','alpha':0.45})\n",
     "\n",
     "cc_r = ax.contour(img.xaxis, img.yaxis, r, r_circles, linewidths=1, linestyles='--', colors='w')\n",
     "ax.clabel(cc_r)\n",
@@ -301,7 +309,9 @@
     "for _r in r_circles:\n",
     "    c = plt.Circle((0, 0), radius=_r, fc='none', ec='w', ls='--')\n",
     "    ax.text(-_r, 0, f'{_r:.1f}\"', rotation=90, c='w', ha='right', va='center')\n",
-    "    ax.add_artist(c)"
+    "    ax.add_artist(c)\n",
+    "    \n",
+    "f.savefig(figpath / f\"{figname}_deprojection.png\")"
    ]
   },
   {
@@ -337,7 +347,8 @@
     "    c = plt.Circle((0, 0), radius=_r, fc='none', ec='w', ls='--')\n",
     "    ax.text(-_r, 0, f'{_r:.1f}\"', rotation=90, c='w', ha='right', va='center')\n",
     "    ax.add_artist(c)\n",
-    "    "
+    "\n",
+    "f.savefig(figpath / f\"{figname}_profile.png\")"
    ]
   },
   {
@@ -355,7 +366,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(tu, np.nanmean(im_dp / profile[:, None] - 1, 0))"
+    "plt.plot(tu, np.nanmean(im_dp / profile[:, None] - 1, 0));"
    ]
   }
  ],
